--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -49,6 +49,7 @@
     "style-loader": "^2.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.1",
+    "svg-inline-loader": "^0.8.2",
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3",
     "chalk": "2.4.x",
